# semantic-release-kata

./: .gitignore  LICENSE  README.md
.github/workflows/: dotnet.yml  java.yml  python.yml
csharp/: .gitignore  .releaserc.json  README.md  SemanticRelease.sln
csharp/LiftButton/: Lift.cs  LiftButton.csproj
csharp/LiftButton.Tests/: LiftButton.Tests.csproj  LiftTest.cs
docs/: README.md  _config.yml  index.md
docs/_explanation/: continuous-integration.md
docs/_explanation/semantic-release/: publishing-nuget-package.md  python-releasing.md  semantic-release.md  upload-artifact-maven.md
docs/_explanation/semantic-versioning/: dotnet-versioning.md  java-versioning.md  python-versioning.md  semantic-versioning.md
docs/_how-to/: delete-all-releases.md  release-a-version.md
docs/_includes/: footer_custom.html  nav_footer_custom.html
docs/_reference/: commit-convention.md  lift-button.md
java/: .releaserc.json  README.md  pom.xml
java/src/main/java/com/ibanfr/liftbutton/: Lift.java
java/src/test/java/com/ibanfr/liftbutton/: LiftTest.java  requirements.md
python/: .releaserc.json  CHANGELOG.md  README.md  pyproject.toml
python/src/lift_button/: lift.py
python/test/: test_lift.py
